RELEASE NOTES
---
## Pre-version 1.6.11.0

Version 1.6.10.2
- Fixed NFS extraction
- Add PROTO_UNKNOWN if cannot find the protocol of some protocol which has classify_next_proto function base on a header value such as: PROTO_ETHERNET, PROTO_IP, PROTO_IPV6, PROTO_GTE, PROTO_GTP,...

Version 1.6.10.1
- Fixed GTP offset
- Fixed FTP memory corruption when freeing command which contains special character
- Fixed Redis classification

## Version 1.6.10.0
- Add classification function to 25 unknown protocols
- Update PROTO_SCTP: Extract more information
- Replace the 8 dead hostname protocols by new protocols from top 50 in France

Version 1.6.9.2
- Deliver to THALES
- Fixed double free AVL tree on Centos environment
- Replace PROTO_GCM by PROTO_TWITCH
- Replace PROTO_GTP2 by PROTO_20MINUTES
- Replace PROTO_IMESSAGE by PROTO_ALIEXPRESS
- Replace PROTO_MANET by PROTO_FNAC
- Replace PROTO_QUICKTIME by PROTO_FORBES
- Replace PROTO_HTTP_CONNECT by PROTO_FOXNEWS
- Replace PROTO_FOXNEWS by PROTO_REUTERS

Version 1.6.9.1
- Update PROTO_GTP: classify_next, extract GTP header information such as: version, proto_type,...
- Update PROTO_SCTP: add next protocols: PROTO_SCTP_INT, PROTO_SCTP_SACK, PROTO_SCTP_DATA
- Fixed FTP reconstruction in ACTIVE MODE - remove some unexpected value in the command
- Fixed problem with protocol loop: IP - GRE - IP - GRE - IP - TCP - HTTP
- Replace the 8 dead hostname protocols by new protocols from top 50 in France
	- Replace protocol grooveshark by groovesharks - hostname has changed
	- Update PROTO_GAZETEVATAN with new hostname
	- Change PROTO_INCREDIBAR by PROTO_LEBONCOIN
	- Replace PROTO_KAZAA by PROTO_ORANGEFR
	- Replace PROTO_LOKERZ by PROTO_LEMONDE
	- Replace PROTO_MSCDN by PROTO_LEFIGARO
	- Update hostname for PROTO_LIMELIGHT: add new hostnames: limelight.com, llnw.net
- Add classification function to 25 unknown protocols
	- Replace PROTO_302_FOUND by PROTO_ZONE_TELECHARGEMENT
	- Replace PROTO_GOSMS by PROTO_JEUXVIDEO