@@ -3812,6 +3812,12 @@ int init_tcpip_plugin() {
         exit(0);
     }
     /////////////////////////////////////////////
+       /////////// INITILIZING PROTO_LLMNR //////////////////
+    if (!init_proto_llmnr_struct()) {
+        fprintf(stderr, "Error initializing protocol proto_llmnr\n Exiting\n");
+        exit(0);
+    }
+    /////////////////////////////////////////////
     ///////////////////////////////////////////////////////////////////////////////////////
     /////////////////END OF GENERATED CODE ////////////////////////////
     ///////////////////////////////////////////////////////////////////////////////////////
